--- a/Day 2 - resume.html
+++ b/Day 2 - resume.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <table border="1">
-    <tr>
-    <td><img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png?20170328184010" alt="MyPhoto.png" width="100px" height="100px">
-    <strong> SHREY RASTOGI</strong></td>
-    <td>Third year student passionate about Technology</td>
+    <tr><td><img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png?20170328184010" alt="MyPhoto.png" width="100px" height="100px"></td></tr>
+    <tr><td><strong> SHREY RASTOGI</strong></td></tr>
+    <tr><td>Third year student passionate about Technology</td></tr>
     </table>
 </body>
 </html>
