--- a/Day 4 - css_intro.html
+++ b/Day 4 - css_intro.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Day 4 - css_intro.css">
     <title>Document</title>
 </head>
 <style>
-    header{
+    /* header{
         background-color: aqua;
         font-size: x-large;
-    }
+    } */
 </style>
-<body style="background-color: tomato;">
+<body style="color: tomato;">
     <header>
         <nav>
         <ul>
         <li style="color: red;"><a href="Home">Home</a></li>
-        <li><a href="About">About</a></li>
+        <li><a href="#About">About</a></li>
         <li><a href="Projects">Projects</a></li>
         <li><a href="Skills">Skills</a></li>
         <li><a href="Achievements">Achievements</a></li>
