--- a/Day 2.2 - navigation bar.html
+++ b/Day 2.2 - navigation bar.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <style>
+    <!-- <style>
         nav {background-color:blue; text-align: center;}
-    </style>
+    </style> -->
     <nav>
     <a href="Home">Home</a> |
     <a href="About">About</a> |
