Adding remaining files

--- a/Day 6 - transition property.html
+++ b/Day 6 - transition property.html
@@ -9,16 +9,22 @@
         width: 100px;
         height: 100px;
         background: purple;
+        transition: all 2s;
+        /* transition-delay: 2s; */
+    }
+    h1{
+        transform: translate(50%, 50%);
     }
     div:hover{
-        width: 300px;
-        height: 300px;
+        width: 100vw;
+        height: 100vh;
         background-color: aquamarine;
-        transition: height 0.5s;
+        /* transition: width 10s;
+        transition: height 0.5s; */
     }
 </style>
 </head>
 <body>
-<div></div>
+<div><h1>test</h1></div>
 </body>
 </html>
